[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Entities/Player/HUD/HUD.tscn" type="PackedScene" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.9939
height = 3.34687

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Body" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="BlockDetectorTop" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -17 )

[node name="BlockDetectorBottom" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 17 )

[node name="BlockDetectorRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 17, 0 )

[node name="BlockDetectorLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -17, 0 )
